# serializer version: 1
# name: test_script_ok[script_multi]
  '''
  query
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    select
      select_list
        select_expr
          ident	col2
      from_clause
        from_item_table
          path_expression
            ident	table2
  
  '''
# ---
# name: test_script_ok[script_multi_with_trailing_semi]
  '''
  query
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    select
      select_list
        select_expr
          ident	col2
      from_clause
        from_item_table
          path_expression
            ident	table2
  
  '''
# ---
# name: test_script_ok[script_single]
  '''
  select
    select_list
      select_expr
        ident	col1
    from_clause
      from_item_table
        path_expression
          ident	table1
  
  '''
# ---
# name: test_script_ok[script_top_level_from]
  '''
  pipe_from
    from_clause
      from_item_table
        path_expression
          ident	table1
  
  '''
# ---
